Update LinkedIn image source path in footer

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -5,7 +5,7 @@
        href="https://www.linkedin.com/in/sankum-chandra"
        target="_blank"
        rel="noopener">
-      <img src="assets/images/in.webp" alt="LinkedIn">
+      <img src="/assets/images/in.webp" alt="LinkedIn">
     </a>
 
     <p class="footer-name">
