--- a/css/components.css
+++ b/css/components.css
@@ -1112,3 +1112,11 @@ main > section:last-of-type {
   font-size: 18px;
   line-height: 1.6;
 }
+
+/* Center hero CTA only */
+.cta-hero-secondary {
+  display: block;
+  width: fit-content;
+  margin: 20px auto 0 auto;
+}
+
